# VPBank_FE

./: package.json
api/: pyproject.toml
api/core/: asgi.py  celery.py  routing.py  settings.py  urls.py
api/interface/: account.py  auth.py
api/module/account/: filter.py  models.py  serializers.py  urls.py  views.py
api/module/account/management/commands/: seeding_account.py
api/module/account/migrations/: 0001_initial.py  0002_onetimepassword.py  0003_user_role.py  0004_alter_user_role_profile.py
api/module/chat/: apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
api/module/chat/migrations/: 0001_initial.py  0002_remove_roomchat_chat_messages.py
api/type/: email.py  general.py  result.py
api/util/: authen.py  otp.py  parseToken.py
docker/: .env  docker-compose.yml  exec
docker/config/: nginx.conf
docker/dockerfiles/: api
src/: const.js  main.jsx  router.jsx  state.js
src/components/auth/login/: form.jsx
src/components/auth/signUp/: form.jsx  index.jsx
src/components/common/layout/main/: index.jsx  listItem.jsx  searchBar.jsx  toolBar.jsx
src/components/common/route/: notFound404.jsx  privateRoute.jsx
src/components/page/: page.jsx
src/components/page/dashBoard/: index.jsx
src/service/: urls.js
src/service/helper/: navUtil.js  util.js
web/: package-lock.json  vite.config.js
web/src/: const.js  router.jsx
web/src/components/auth/forgotPassword/: form.jsx  index.jsx
web/src/components/page/: page.jsx  test.jsx
web/src/service/helper/: formUtils.js  requestUtil.js  storage.js
(+13 files in other folders)
